# nxc-scan

./: LICENSE  Makefile  README.md  nxc_scan.py  nxc_scan_config.json  pyproject.toml
nxc/: builder.py  cli.py  config.py  runner.py  services.py
tests/: test_builder.py  test_cli_to_command.py  test_config.py  test_runner.py  test_services.py
