[project]
name = "nxc-scan"
version = "0.1.0"
description = "Wrapper tool for using multiple services of nxc in one command."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
nxc-scan = "nxc_scan:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["nxc", "nxc_scan.py", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["nxc"]

[tool.hatch.build.targets.wheel.force-include]
"nxc_scan.py" = "nxc_scan.py"
